--- a/packages/mantine/src/tsconfig.json
+++ b/packages/mantine/src/tsconfig.json
@@ -1,23 +1,10 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "include": [
-    "./"
-  ],
+  "include": ["./"],
   "compilerOptions": {
     "rootDir": "./",
     "outDir": "../lib",
     "baseUrl": "../",
     "jsx": "react-jsx"
-  },
-  "references": [
-    {
-      "path": "../../core"
-    },
-    {
-      "path": "../../utils"
-    },
-    {
-      "path": "../../validator-ajv8"
-    }
-  ]
+  }
 }
