--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -42,23 +42,12 @@
     "@aokiapp/rjsf-mantine-theme": "^5.15.1",
     "@rjsf/utils": "^5.15.1",
     "@rjsf/validator-ajv6": "^5.15.1",
-    "@rjsf/validator-ajv8": "^5.15.1",
     "@tabler/icons-react": "^2.45.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "ajv-i18n": "^4.2.0",
-    "atob": "^2.1.2",
-    "core-js": "^3.32.2",
-    "deep-freeze-es6": "^1.4.1",
-    "jss": "^10.10.0",
-    "lodash": "^4.17.21",
-    "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.6.7",
-    "react-dom": "^18.2.0",
-    "react-frame-component": "^4.1.3",
-    "react-is": "^18.2.0",
-    "react-portal": "^4.2.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
