--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -100,8 +100,5 @@
     "json-schema"
   ],
   "license": "Apache-2.0",
-  "homepage": "https://github.com/rjsf-team/react-jsonschema-form",
-  "publishConfig": {
-    "access": "public"
-  }
+  "homepage": "https://github.com/rjsf-team/react-jsonschema-form"
 }
