--- a/packages/mantine/package.json
+++ b/packages/mantine/package.json
@@ -34,14 +34,14 @@
     "@mantine/core": ">=7.4.0",
     "@mantine/dates": ">=7.4.0",
     "@mantine/hooks": ">=7.4.0",
-    "@rjsf/core": "^5.15.x",
-    "@rjsf/utils": "^5.15.x",
+    "@rjsf/core": ">=5.16.1",
+    "@rjsf/utils": ">=5.16.1",
     "@tabler/icons-react": ">=2.45.0",
     "dayjs": ">=1.11.10",
     "react": ">=17"
   },
   "devDependencies": {
-    "@rjsf/snapshot-tests": "^5.15.x",
+    "@rjsf/snapshot-tests": "^5.16.x",
     "@types/react-test-renderer": "^18.0.7",
     "react-test-renderer": "^18.2.0"
   },
