--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@aokiapp/rjsf-mantine-theme": "^0.0.5",
+    "@aokiapp/rjsf-mantine-corporate": "^0.0.5",
     "@babel/runtime": "^7.22.15",
     "@mantine/core": "^7.4.0",
     "@mantine/dates": "^7.4.0",
