--- a/packages/mantine-corporate/tsconfig.json
+++ b/packages/mantine-corporate/tsconfig.json
@@ -1,4 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
-  "files": []
+  "files": [],
+  "references": [
+    {
+      "path": "./src"
+    }
+  ]
 }
