--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -33,8 +33,8 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "@aokiapp/rjsf-mantine-theme": "^0.0.5",
     "@aokiapp/rjsf-mantine-corporate": "file://../rjsf-mantine-corporate",
+    "@aokiapp/rjsf-mantine-theme": "^0.0.5",
     "@babel/runtime": "^7.22.15",
     "@mantine/core": "^7.4.0",
     "@mantine/dates": "^7.4.0",
@@ -42,6 +42,7 @@
     "@rjsf/core": "^5.15.1",
     "@rjsf/utils": "^5.15.1",
     "@rjsf/validator-ajv6": "^5.15.1",
+    "@sinclair/typebox": "^0.32.10",
     "@tabler/icons-react": "^2.45.0",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
