--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -38,6 +38,7 @@
     "@babel/runtime": "^7.22.15",
     "@mantine/core": "^7.4.0",
     "@mantine/dates": "^7.4.0",
+    "@mantine/dropzone": "^7.4.2",
     "@mantine/hooks": "^7.4.0",
     "@rjsf/core": "^5.15.1",
     "@rjsf/utils": "^5.15.1",
