--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -50,7 +50,8 @@
     "ajv-i18n": "^4.2.0",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@hello-pangea/dnd": "^16.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.15",
