--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://registry.npmjs.org/
+@aokiapp:registry="https://npm.pkg.github.com"
 # Use legacy peer deps to allow things to install with node 16
 legacy-peer-deps=true
