--- a/packages/mantine-corporate/package.json
+++ b/packages/mantine-corporate/package.json
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@rjsf/snapshot-tests": "^5.16.x",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@types/react-test-renderer": "^18.0.7",
     "react-test-renderer": "^18.2.0",
+    "rollup-plugin-banner2": "^1.2.2",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2"
   },
