--- a/package.json
+++ b/package.json
@@ -55,7 +55,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lerna": "^8.0.2",
+    "rollup": "^4.9.6",
     "prettier": "^3.1.1",
+    "esbuild": "^0.20.0",
+    "rollup-plugin-esbuild": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.3.3"
   }
 }
