--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/eslint-parser": "^7.23.3",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-babel": "^6.0.4",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "@types/prettier": "^2.7.3",
@@ -47,6 +48,7 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -55,9 +57,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lerna": "^8.0.2",
-    "rollup": "^4.9.6",
     "prettier": "^3.1.1",
-    "esbuild": "^0.20.0",
+    "rollup": "^4.9.6",
     "rollup-plugin-esbuild": "^6.1.1",
     "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.3.3"
