--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.1",
   "description": "Mantine theme for react-jsonschema-form",
   "scripts": {
-    "build": "npm run --workspaces build --if-present",
+    "build": "lerna run build",
     "lint": "eslint './packages/**/*.{ts,js,tsx,jsx}' --quiet",
     "lint:fix": "eslint --fix .",
     "start": "echo 'use \"npm run build\" from main directory and then \"npm start\" in the playground package'",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "typecheck": "npm run typecheck --workspaces --if-present"
+    "typecheck": "lerna run typecheck"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "lerna": "^8.0.2",
     "prettier": "^3.1.1",
     "rollup": "^4.9.6",
     "rollup-plugin-esbuild": "^6.1.1",
