--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
-    "plugin:react/jsx-runtime",
-    "plugin:prettier/recommended"
+    "plugin:react/jsx-runtime"
   ],
   "rules": {
     "react/no-deprecated": "warn",
