--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           # use file .node-version to determine node version
           node-version-file: .node-version
+          registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
         run: npm ci
